fixing a spacing issue through css

--- a/Assets/CSS/index.css
+++ b/Assets/CSS/index.css
@@ -50,7 +50,7 @@ select {
 }
 
 #p {
-    margin-left: 20px;
+    margin-left: 10px;
 }
 
 button {
